--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             <div class="NavigationBar">
                 <ul>
                     <li><a href="index.html" class="activePage">HOME</a></li>
-                    <li><a href="shop.html">SHOP TECH</a></li>
+                    <li><a href="#">SHOP TECH</a></li>
                     <li><a href="#">WHAT'S POPULAR</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">CONTACT US</a></li>
@@ -29,7 +29,7 @@
             <h1>VERTECH</h1>
         </div>
         <div class="buttonDiv">
-            <button type="button">LEARN MORE</button>
+            <button type="button" onclick="window.open('@Url.Action("ContactUs","Home")')">LEARN MORE</button>
             <button type="button" id="exploreBtn">EXPLORE</button>
         </div>
         <div class="sliderTitle">
