Beautified InquireData View

--- a/Views/Inquiries/InquireData.cshtml
+++ b/Views/Inquiries/InquireData.cshtml
@@ -3,4 +3,32 @@
 *@
 @{
 }
-<h1>Submitted!</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+    <link rel="stylesheet" href="/CSS/HomeNavigationStyle.css" type="text/css">
+    <link rel="stylesheet" href="/CSS/HomeStyle.css" type="text/css">
+    <title>VERTECH</title>
+</head>
+<body>
+        <nav>
+            <div class="NavigationBar">
+                <ul>
+                    <li><a href="@Url.Action("Index", "Home")">HOME</a></li>
+                    <li><a href="@Url.Action("ShopNow", "Shop")">SHOP TECH</a></li>
+                    <li><a href="@Url.Action("AboutUs", "Home")">ABOUT</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="introImg">
+            <img src="/Images/1.jpg">
+        </div>
+        <div class="titleHeading">
+            <h1>INQUIRY SENT!</h1>
+        </div>
+        <div class="redirectingDiv">
+            Redirecting in 5s
+            
+        </div>
+</body>
