--- a/Views/Inquiries/InquireData.cshtml
+++ b/Views/Inquiries/InquireData.cshtml
@@ -9,7 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
     <link rel="stylesheet" href="/CSS/HomeNavigationStyle.css" type="text/css">
     <link rel="stylesheet" href="/CSS/HomeStyle.css" type="text/css">
-    <title>VERTECH</title>
+    <title>VERTECH - Redirecting</title>
 </head>
 <body>
         <nav>
@@ -26,9 +26,9 @@
         </div>
         <div class="titleHeading">
             <h1>INQUIRY SENT!</h1>
+            Redirecting in 5s.
         </div>
         <div class="redirectingDiv">
-            Redirecting in 5s
-            
+            <script src="~/Scripts/redirect.js"></script>
         </div>
 </body>
